--- a/DishOCR/project.properties
+++ b/DishOCR/project.properties
@@ -10,4 +10,4 @@
 # Project target.
 target=android-17
 proguard.config=proguard.cfg
-android.library.reference.1=../../workspace/tess-two/tess-two
+android.library.reference.1=../../../Documents/WorkspaceAU/tess-two
