Add search restaurant.

--- a/DishOCR/AndroidManifest.xml
+++ b/DishOCR/AndroidManifest.xml
@@ -40,10 +40,14 @@
               android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
               android:windowSoftInputMode="stateAlwaysHidden"              
               >
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
+      </activity>
+      
+      <activity android:name=".SearchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
       </activity>
     <activity android:name=".HelpActivity"
               android:screenOrientation="user">
