--- a/DishOCR/AndroidManifest.xml
+++ b/DishOCR/AndroidManifest.xml
@@ -17,49 +17,73 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="edu.sfsu.cs.orange.ocr"
-          android:installLocation="preferExternal" 
-          android:versionName="0.5.13" 
-          android:versionCode="32"
-          >
-  <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="10"/>
-  <supports-screens android:xlargeScreens="true"
-                    android:largeScreens="true"
-                    android:normalScreens="true"
-                    android:smallScreens="true" />
-  <uses-feature android:name="android.hardware.camera.autofocus" />
-  <uses-feature android:name="android.hardware.camera.flash" android:required="false" />
-  <uses-feature android:name="android.hardware.camera"/>
-  <uses-feature android:name="android.hardware.screen.landscape"/>
-  
-  <application android:icon="@drawable/ic_launcher"
-               android:label="@string/app_name">
-    <activity android:name=".CaptureActivity"
-              android:screenOrientation="landscape"
-              android:configChanges="orientation|keyboardHidden|screenSize"
-              android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-              android:windowSoftInputMode="stateAlwaysHidden"              
-              >
-      </activity>
-      
-      <activity android:name=".SearchActivity">
+    package="edu.sfsu.cs.orange.ocr"
+    android:installLocation="preferExternal"
+    android:versionCode="32"
+    android:versionName="0.5.13" >
+
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="17" />
+
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
+
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera.flash" android:required="false" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.screen.landscape" />
+
+    <application android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBfXrdSbj0YbtPthwpsMaXUIxz_066h6jM" />
+
+        <activity
+            android:name=".CaptureActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
+        <activity android:name=".SearchActivity" >
+        </activity>
+        <activity
+            android:name=".HelpActivity"
+            android:screenOrientation="user" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".PreferencesActivity" />
+        <activity android:name=".GoogleMapActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-      </activity>
-    <activity android:name=".HelpActivity"
-              android:screenOrientation="user">
-      <intent-filter>
-        <action android:name="android.intent.action.VIEW"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-      </intent-filter>
-    </activity>
-    
-    <activity android:name=".PreferencesActivity" />
-  </application>
-  <uses-permission android:name="android.permission.CAMERA"/>
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+        </activity>
+    </application>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <!--
+  The following two permissions are not required to use
+  Google Maps Android API v2, but are recommended.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 </manifest>
