--- a/DishOCR/project.properties
+++ b/DishOCR/project.properties
@@ -8,6 +8,7 @@
 # project structure.
 
 # Project target.
-target=android-17
+target=Google Inc.:Google APIs:17
 proguard.config=proguard.cfg
-android.library.reference.1=../../../Documents/WorkspaceAU/tess-two
+android.library.reference.1=..\\..\\..\\Documents\\WorkspaceAU\\tess-two
+android.library.reference.2=../../../Documents/WorkspaceAU/google-play-services_lib
