--- a/DishOCR/AndroidManifest.xml
+++ b/DishOCR/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity
             android:name=".CaptureActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="stateAlwaysHidden" >
         </activity>
