--- a/DishOCR/AndroidManifest.xml
+++ b/DishOCR/AndroidManifest.xml
@@ -17,7 +17,7 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.sfsu.cs.orange.ocr"
+    package="com.dish.ocr"
     android:installLocation="preferExternal"
     android:versionCode="32"
     android:versionName="0.5.13" >
