--- a/DishOCR/AndroidManifest.xml
+++ b/DishOCR/AndroidManifest.xml
@@ -60,7 +60,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".PreferencesActivity" />
-        <activity android:name=".GoogleMapActivity" >
+        <activity android:name=".GoogleMapActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
